--- a/compose/local/Dockerfile
+++ b/compose/local/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.10 as python
+FROM python:3.10.11 as python
 
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -24,11 +24,11 @@ COPY ./requirements.txt .
 RUN pip install --upgrade pip \
     pip install -r requirements.txt
 
-COPY ./compose/development/entrypoint /entrypoint
+COPY ./compose/local/entrypoint /entrypoint
 RUN sed -i 's/\r$//g' /entrypoint
 RUN chmod +x /entrypoint
 
-COPY ./compose/development/start /start
+COPY ./compose/local/start /start
 RUN sed -i 's/\r$//g' /start
 RUN chmod +x /start
 
